# pages_counter

./: LICENSE  README.md  RELEASE_NOTES.md  cli.py  count_pages.spec  gui.py  gui.spec  main.py  pyproject.toml  services.py
